# verity

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: base.py  citation_agent.py  comps_agent.py  critique_agent.py  earnings_agent.py  filing_agent.py  graph.py  news_agent.py  orchestrator.py  synthesis_agent.py
backend/app/api/routes/: auth.py  health.py  research.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py
backend/app/models/: schemas.py
backend/app/services/: cache.py  chunker.py  embedder.py  financials.py  news_client.py  sec_edgar.py  vector_store.py
backend/app/worker/: __init__.py  tasks.py
backend/scripts/: init_db.sql
backend/tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AgentProgressPanel.tsx  AppShell.tsx  Dashboard.tsx  JobHistory.tsx  LoginPage.tsx  ReportViewer.tsx
frontend/src/lib/: api.ts  auth-context.tsx  use-research.ts
frontend/src/types/: index.ts
